Add unaccounted disabled jvm options analysis.